--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "GraphQL exploration",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "coolbuild": "babel -d dist/ src/",
+    "coolrun": "node dist/",
+    "cool": "npm run coolbuild && npm run coolrun"
   },
-  "keywords": [
-    "graphql"
-  ],
+  "keywords": ["graphql"],
   "author": "Enrique Ballesté Peralta <enrique.balleste@gmail.com>",
   "dependencies": {
     "apollo-server-express": "^1.3.2",
@@ -16,5 +16,8 @@
     "graphql": "^0.12.3",
     "graphql-tools": "^2.14.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1"
+  }
 }
