--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": ["env"]
+  "presets": ["env"],
+  "plugins": [
+    [
+      "module-resolver", {
+        "cwd": "babelrc",
+        "root": ["./src"]
+      }
+    ]
+  ]
 }
