--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "graphql": "^0.12.3",
-    "graphql-tools": "^2.14.1"
+    "graphql-tools": "^2.14.1",
+    "mysql2": "^1.5.1",
+    "sequelize": "^4.28.6"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
