--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^0.12.3",
     "graphql-tools": "^2.14.1",
     "mysql2": "^1.5.1",
+    "regenerator-runtime": "^0.11.1",
     "sequelize": "^4.28.6"
   },
   "devDependencies": {
