--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "Enrique Ballesté Peralta <enrique.balleste@gmail.com>",
   "dependencies": {
     "apollo-server-express": "^1.3.2",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
     "graphql": "^0.12.3",
     "graphql-tools": "^2.14.1",
+    "jsonwebtoken": "^8.1.0",
     "mysql2": "^1.5.1",
     "regenerator-runtime": "^0.11.1",
     "sequelize": "^4.28.6"
